feature(openapi): Massive updates to error handling within rororo.
With given commit provide a better way to handle security & request
parameters validation errors.

This also results in ability enable CORS / Error Middleware for
`aiohttp.web` application via `setup_openapi` function.

Issue: #14
Issue: #22
