# examples/hobotnica/openapi.yaml
@@ -38,6 +38,26 @@ paths:
         - jwt: []
         - personalToken: []
 
+  "/repositories/{owner}":
+    get:
+      operationId: "list_owner_repositories"
+      tags:
+        - repositories
+      summary: "List repositories owned by user."
+      parameters:
+        - $ref: "#/components/parameters/RepositoryOwner"
+      responses:
+        "200":
+          description: "Repositories list."
+          content:
+            application/json:
+              schema:
+                type: "array"
+                items:
+                  $ref: "#/components/schemas/Repository"
+      security:
+        - basic: []
+
   "/repositories/{owner}/{name}":
     get:
       operationId: "retrieve_repository"
@@ -56,7 +76,6 @@ paths:
               schema:
                 $ref: "#/components/schemas/Repository"
       security:
-        - basic: []
         - jwt: []
           personalToken: []
 
